--- a/custom-component/src/App.css
+++ b/custom-component/src/App.css
@@ -1,10 +1,33 @@
 /* css normalize */
 @import "./normalize.css";
-
+:root {
+  --button-color: #4900ce;
+  --basic-box-shadow: 0px 1px 2px black inset,
+    0px 2px 3px rgba(0, 0, 0, 0.5) inset;
+  --basic-text-shadow: 2px 3px 5px rgba(0, 0, 0, 0.5);
+}
 .App {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   width: 100%;
   padding: 20px;
   box-sizing: border-box;
+}
+
+.container {
+  box-sizing: border-box;
+  border-radius: 10px;
+  border: 2px solid rgba(0, 0, 0, 0.2);
+  position: relative;
+  margin-bottom: 10px;
+  height: 300px;
+  width: 100%;
+}
+
+.title {
+  position: absolute;
+  top: 10px;
+  left: 15px;
+  font-size: 18px;
+  font-weight: 800;
 }
