--- a/custom-component/src/App.css
+++ b/custom-component/src/App.css
@@ -5,6 +5,7 @@
   --basic-box-shadow: 0px 1px 2px black inset,
     0px 2px 3px rgba(0, 0, 0, 0.5) inset;
   --basic-text-shadow: 2px 3px 5px rgba(0, 0, 0, 0.5);
+  --main-border-color: rgba(0, 0, 0, 0.2);
 }
 .App {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -12,16 +13,18 @@
   width: 100%;
   padding: 20px;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .container {
   box-sizing: border-box;
   border-radius: 10px;
-  border: 2px solid rgba(0, 0, 0, 0.2);
+  border: 2px solid var(--main-border-color);
   position: relative;
   margin-bottom: 10px;
   height: 300px;
   width: 100%;
+  overflow: hidden;
 }
 
 .title {
