--- a/custom-component/src/css/Tag.module.css
+++ b/custom-component/src/css/Tag.module.css
@@ -5,7 +5,7 @@
   height: 100%;
 }
 .tag_list {
-  border: 2px solid rgba(0, 0, 0, 0.2);
+  border: 2px solid var(--main-border-color);
   border-radius: 5px;
   width: 80%;
   display: flex;
